--- a/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.Rmd
+++ b/ml-basics/01 - Data Exploration/ottr_solutions_notebooks/Student/student/01_Data_Exploration_Solution_Ottr_Learner.Rmd
@@ -11,15 +11,6 @@ output:
     code_download: yes
 ---
 
-```
-BEGIN ASSIGNMENT
-generate: true
-solutions_pdf: true
-seed:
-  variable: rng_seed
-  autograder_value: 42
-  student_value: 90
-```
 
 ## **Flights Data Exploration Challenge**
 
@@ -34,9 +25,8 @@ suppressPackageStartupMessages({
   library(summarytools)
   library(glue)
   library(patchwork)
-  library(testthat)
   })
-rng_seed = 42
+
 
 ```
 
@@ -146,43 +136,33 @@ colSums(is.na(df_flights))
 
 Hmm, looks like there are some NA (missing values) `late departure` indicators. Departures are considered late if the delay is 15 minutes or more, so let's see the delays for the ones with an NA late indicator:
 
-**Question 1.** Filter the `df_flights` tibble to only obtain rows where there is a missing value and then select `DepDelay` and `DepDel15` columns. Assign the results in a variable name `flights_depdel`.
+**Question 1.**
 
-```
-BEGIN QUESTION
-name: q1
-points: 2
-```
+Starting with `df_flights`, **select** columns `DepDelay` and `DepDel15` then **filter** to obtain rows where the value of `DepDel15` is `NA`. Assign the results in a variable name `flights_depdel`.
+
+Filter the `df_flights` tibble to only obtain rows where there is a missing value and then select `DepDelay` and `DepDel15` columns. Assign the results in a variable name `flights_depdel`.
 
 ```{r}
-# Filter the tibble to obtain rows where there is a missing value
-# and then keep DepDelay and DepDel15 columns only
+# Select columns DepDelay and DepDel15 and then Filter the tibble to obtain rows where there is a missing value
+
 flights_depdel <- df_flights %>% 
-  filter(rowSums(is.na(.)) > 0) %>% 
-  select(DepDelay, DepDel15)
-```
-
-```{r}
-## Test ##
-test_that('data dimensions correct', {
-  expect_output(glimpse(flights_depdel), "Rows: 2,761")
-  expect_output(glimpse(flights_depdel), "Columns: 2")
+  select(DepDelay, DepDel15) %>% 
+  filter(is.na(DepDel15)) 
   
-})
 ```
 
 ```{r}
-. = " # BEGIN TEST CONFIG
-points: 2
-hidden: true
-" # END TEST CONFIG
-test_that('the first column has no NA while the second has 2761 NAs', {
-    expect_equal(sum(is.na(flights_depdel$DepDelay)), 0)
-    expect_equal(sum(is.na(flights_depdel$DepDel15)), 2761)
-})
+. = ottr::check("tests/Question 1.R")
 ```
 
-Try and `glimpse` at `flights_depdel`. From the first few observations, it looks like the observations in `DepDel15` (A binary indicator that departure was delayed by more than 15 minutes) all have a corresponding delay of 0 in `DepDelay`(The number of minutes departure was delayed). Let's check by looking at the summary statistics for the `DepDelay` records:
+Good job! Now, let's `glimpse` at `flights_depdel`.
+
+```{r}
+flights_depdel %>% 
+  glimpse()
+```
+
+From the first few observations, it looks like the observations in `DepDel15` (A binary indicator that departure was delayed by more than 15 minutes) all have a corresponding delay of 0 in `DepDelay`(The number of minutes departure was delayed). Let's check by looking at the summary statistics for the `DepDelay` records:
 
 ```{r}
 # Get summary statistics using summary function
@@ -195,13 +175,9 @@ df_flights %>%
 
 The min, max, and mean are all 0; so it seems that none of these were actually *late* departures.
 
-**Question 2.** Let's replace the missing values in the column **DepDel15** with a `0`. Assign this to a variable name `df_flights`.
+**Question 2.**
 
-```
-BEGIN QUESTION
-name: q2
-points: 2
-```
+Starting with `df_flights`, replace the missing values in the column **DepDel15** with a `0`. Assign this to a variable name `df_flights`.
 
 ```{r}
 # Replace missing values in DepDel15 with 0
@@ -210,42 +186,7 @@ df_flights <- df_flights %>%
 ```
 
 ```{r}
-## Test ##
-test_that('data dimensions correct', {
-  expect_output(glimpse(df_flights), "Rows: 271,940\nColumns: 20")
-  
-})
-```
-
-```{r}
-## Test ##
-test_that('there are no missing values in column DepDel15', {
-  expect_equal(anyNA(df_flights$DepDel15), FALSE)
-  
-})
-```
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('data dimensions correct', {
-  expect_output(glimpse(df_flights), "Rows: 271,940")
-  expect_output(glimpse(df_flights), "Columns: 20")
-  
-})
-```
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('data has no missing values', {
-  expect_equal(anyNA(df_flights), FALSE)
-  
-})
+. = ottr::check("tests/Question 2.R")
 ```
 
 Good job! No missing values now. Let's take this a little further.
@@ -317,16 +258,9 @@ show_distribution <- function(var_data, binwidth) {
 
 **Question 3.** Starting with the `df_flights` data, only keep the **`DepDelay`** column. Assign this to a variable name `df_col`.
 
-Once you have this figured out, call the function `show_distribution` with the arguments names and corresponding values as follows: `var_data = col` and `binwidth = 100`
+Once you have this figured out, call the function `show_distribution` with the arguments names and corresponding values as follows: `var_data = df_col` and `binwidth = 100`
 
 From the function output, what's the distribution of **DepDelay** (The number of minutes departure was delayed)?
-
-```
-BEGIN QUESTION
-name: q3
-points: 2
-```
-
 
 ```{r}
 # Select DepDelay column
@@ -337,63 +271,17 @@ df_col = df_flights %>%
 show_distribution(var_data = df_col, binwidth = 100)
 ```
 
-
-
 ```{r}
-## Test ##
-test_that('df_col corresponds to DepDelay', {
-  
-  expect_equal(colnames(df_col), "DepDelay")
-  expect_output(glimpse(df_col), "Rows: 271,940\nColumns: 1")
-  
-})
+. = ottr::check("tests/Question 3.R")
 ```
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-
-test_that('df_col corresponds to DepDelay', {
-  expect_output(glimpse(df_col), "Rows: 271,940\nColumns: 1\n$ DepDelay", fixed = TRUE)
-})
-
-```
-
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-
-test_that('the distribution of DepDelay is correct', {
-  
- expect_equal(show_distribution(var_data = df_col, binwidth = 100)[[1]], "Minimum: -63.00\nMean: 10.35\nMedian: -1.00\nMode: -3.00\nMaximum: 1425.00")
-  
-})
-
-```
-
-
 
 Now, let's investigate the distribution of **ArrDelay** (The number of minutes arrival was delayed)
 
 **Question 4.** Starting with the `df_flights` data, only keep the **`ArrDelay`** column. Assign this to a variable name `df_col`.
 
-Once you have this figured out, call the function `show_distribution` with the arguments names and corresponding values as follows: `var_data = col` and `binwidth = 100`
+Once you have this figured out, call the function `show_distribution` with the arguments names and corresponding values as follows: `var_data = df_col` and `binwidth = 100`
 
 From the function output, what's the distribution of **ArrDelay**?
-
-```
-BEGIN QUESTION
-name: q4
-points: 2
-```
-
 
 ```{r}
 # Select DepDelay column
@@ -404,47 +292,9 @@ df_col = df_flights %>%
 show_distribution(var_data = df_col, binwidth = 100)
 ```
 
-
-
 ```{r}
-## Test ##
-test_that('df_col corresponds to ArrDelay', {
-  
-  expect_equal(colnames(df_col), "ArrDelay")
-  expect_output(glimpse(df_col), "Rows: 271,940\nColumns: 1")
-  
-})
+. = ottr::check("tests/Question 4.R")
 ```
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-
-test_that('df_col corresponds to ArrDelay', {
-  expect_output(glimpse(df_col), "Rows: 271,940\nColumns: 1\n$ ArrDelay", fixed = TRUE)
-})
-
-```
-
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-
-test_that('the distribution of DepDelay is correct', {
-  
- expect_equal(show_distribution(var_data = df_col, binwidth = 100)[[1]], "Minimum: -75.00\nMean: 6.50\nMedian: -3.00\nMode: 0.00\nMaximum: 1440.00")
-  
-})
-
-```
-
 
 From both outputs, there are a outliers at the lower and upper ends of both variables. Let's trim the data so that we include only rows where the values for these fields are within the 1st and 90th percentile. We begin with the **ArrDelay** observation.
 
@@ -454,22 +304,18 @@ From both outputs, there are a outliers at the lower and upper ends of both vari
 ArrDelay_01pcntile <- df_flights %>% 
   pull(ArrDelay) %>% 
   quantile(probs = 1/100, names = FALSE)
+
 ArrDelay_90pcntile <- df_flights %>% 
   pull(ArrDelay) %>% 
   quantile(probs = 90/100, names = FALSE)
+
+# Print 1st and 90th quantiles respectively
+cat(ArrDelay_01pcntile, "\n", ArrDelay_90pcntile)
 ```
 
 Now that we have quantiles corresponding to 1% and 90%, let's filter the `df_flights` data to only include rows whose Arrival delay falls within this range.
 
 **Question 5.** Starting with the `df_flights` data, filter to only include rows whose **ArrDelay** falls within 1st and 90th quantiles. Assign this to a variable name `df_flights`.
-
-
-
-```
-BEGIN QUESTION
-name: q5
-points: 1
-```
 
 ```{r}
 # Filter data to remove outliers
@@ -478,44 +324,13 @@ df_flights <- df_flights %>%
 
 ```
 
-
-
 ```{r}
-## Test ##
-test_that('there are no outliers', {
-  expect_equal(sum(df_flights$ArrDelay < ArrDelay_01pcntile), 0)
-  expect_equal(sum(df_flights$ArrDelay > ArrDelay_90pcntile), 0)
-  
-})
+. = ottr::check("tests/Question 5.R")
 ```
 
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('data dimensions correct', {
-  expect_output(glimpse(df_flights), "Rows: 241,916\nColumns: 20")
-  
-})
-```
-
-
-
-
-
-Now, let's do the same for DepDelay column.
+Now, let's do the same for `DepDelay` column.
 
 **Question 6.** Starting with the `df_flights` data, obtain quantiles corresponding to 1% and 90%. Assign these values to the variable names `DepDelay_01pcntile` and `DepDelay_90pcntile` respectively.
-
-```
-BEGIN QUESTION
-name: q6
-points: 1
-```
-
-
 
 ```{r}
 # Trim outliers for DepDelay based on 1% and 90% percentiles
@@ -523,33 +338,17 @@ points: 1
 DepDelay_01pcntile <- df_flights %>% 
   pull(DepDelay) %>% 
   quantile(probs = 1/100, names = FALSE)
+
 DepDelay_90pcntile <- df_flights %>% 
   pull(DepDelay) %>% 
   quantile(probs = 90/100, names = FALSE)
+
+# Print 1st and 90th quantiles respectively
+cat(DepDelay_01pcntile, "\n", DepDelay_90pcntile)
 ```
 
-
 ```{r}
-## Test ##
-test_that('quantile dimensions are correct', {
-  expect_equal(length(DepDelay_01pcntile), 1)
-  expect_equal(length(DepDelay_90pcntile), 1)
-  
-})
-```
-
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('quantile values are correct', {
-  expect_equal(DepDelay_01pcntile, -12)
-  expect_equal(DepDelay_90pcntile, 17)
-  
-})
+. = ottr::check("tests/Question 6.R")
 ```
 
 Good job!!
@@ -558,41 +357,14 @@ Now that we have quantiles corresponding to 1% and 90%, let's filter the `df_fli
 
 **Question 7.** Starting with the `df_flights` data, filter to only include rows whose **DepDelay** falls within 1st and 90th quantiles. Assign this to a variable name `df_flights`.
 
-
-
-```
-BEGIN QUESTION
-name: q7
-points: 1
-```
-
-
 ```{r}
 # Filter data to remove outliers
 df_flights <- df_flights %>% 
   filter(DepDelay > DepDelay_01pcntile, DepDelay < DepDelay_90pcntile)
 ```
 
-
 ```{r}
-## Test ##
-test_that('there are no outliers', {
-  expect_equal(sum(df_flights$DepDelay < DepDelay_01pcntile), 0)
-  expect_equal(sum(df_flights$DepDelay > DepDelay_90pcntile), 0)
-  
-})
-```
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('data dimensions correct', {
-  expect_output(glimpse(df_flights), "Rows: 214,397\nColumns: 20")
-  
-})
+. = ottr::check("tests/Question 7.R")
 ```
 
 You rock!!
@@ -603,8 +375,6 @@ Now, we can check the distribution of our two variables with outliers removed.
 # Distribution of DepDelay
 show_distribution(var_data = select(df_flights, DepDelay), binwidth = 2)
 ```
-
-
 
 ```{r}
 # Distribution of ArrDelay
@@ -627,66 +397,34 @@ df_flights %>%
 
 ### **What are the mean departure and arrival delays?**
 
-
 **Question 8.** Starting with the `df_flights` data, use `across()` within `summarize()` to find the mean across `**DepDelay**` and `**ArrDelay**` columns. Assign this to `df_delays` variable name. What are the mean delays?
-
-
-
-
-```
-BEGIN QUESTION
-name: q8
-points: 1
-```
-
 
 ```{r}
 # Summarise the departure and arrival delays by finding the mean
 df_delays <- df_flights %>% 
   summarise(across(contains("delay"), mean))
+
+df_delays
 ```
-
-
 
 ```{r}
-## Test ##
-test_that('summary tibble has correct values', {
-  #expect_output(glimpse(df_delays), "Rows: 1\nColumns: 2", fixed = TRUE)
-  
-  expect_equal(df_delays$DepDelay, -0.921692)
-  
-  
-})
+. = ottr::check("tests/Question 8.R")
 ```
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('summary tibble has correct values', {
-  expect_output(glimpse(df_delays), "Rows: 1\nColumns: 2", fixed = TRUE)
-  expect_equal(df_delays$DepDelay, -0.921692)
-  
-  
-})
-```
-
-
-
-
-
 
 ### **How do the carriers compare in terms of arrival delay performance?**
 
+A box plot can be a good way for graphically depicting the distribution of groups of numerical data through their quantiles. The `geom` that takes care of box plots is `geom_boxplot`
+
 ```{r}
+# Compare arrival delay across different carriers
 df_flights %>% 
   ggplot() + 
   geom_boxplot(mapping = aes(x = Carrier, y = ArrDelay))
 ```
 
 ### **How do the carriers compare in terms of departure delay performance?**
+
+Let's do the same for the departure delay performance.
 
 We can also try and rearrange the `Carrier` levels in ascending order of the delay time and sprinkle some color to the plots too.
 
@@ -706,6 +444,8 @@ map(df_flights %>% select(ArrDelay, DepDelay), ~ ggplot(df_flights) +
 
 ### **Are some days of the week more prone to arrival delays than others?**
 
+Again, let's make use of a box plot to visually inspect the distribution of arrival delays depending on the day of the week. To successfully accomplish this, we have to first encode the week days to `categorical` variables, that is, `factors` .
+
 ```{r}
 # Encode day of the week as a categorical and make boxplots
 df_flights %>% 
@@ -716,24 +456,47 @@ df_flights %>%
 
 ### **Are some days of the week more prone to departure delays than others?**
 
+Now, over to you.
+
+**Question 9.** See whether you can investigate whether some days of the week (x axis) are more prone to departure delays (y axis) than others. Start by encoding day of the week as a categorical variable.
+
 ```{r}
-# Encode day of the week as a categorical variable and make boxplots
-df_flights %>% 
-  mutate(DayOfWeek = factor(DayOfWeek)) %>% 
+# Encode day of the week as a categorical variable
+df_flights <- df_flights %>% 
+  mutate(DayOfWeek = factor(DayOfWeek)) 
+
+# Make a box plot of DayOfWeek and DepDelay
+dep_delay_plot <- df_flights %>% 
   ggplot() + 
   geom_boxplot(mapping = aes(x = DayOfWeek, y = DepDelay, color = DayOfWeek), show.legend = FALSE) +
   scale_color_brewer(palette = "Dark2")
+
+dep_delay_plot
 ```
 
+What can you make out of this?
+
+```{r}
+. = ottr::check("tests/Question 9.R")
+```
+
+
+Great progress you are having!
+
 ### **Which departure airport has the highest average departure delay?**
+
+To answer this, we have to first **group** the data **by** `OriginAirportName` and then **summarize** the observations by the **mean** of their Departure delay `DepDelay` and then **arrange** this in **desc**ending order of the mean departure delays.
+
+Let's put this into code.
 
 ```{r}
 # Use group_by %>% summarize to find airports with highest avg DepDelay
 mean_departure_delays <- df_flights %>% 
   group_by(OriginAirportName) %>% 
-  summarise(mean_dep_delay_time = mean(DepDelay)) %>%
+  summarize(mean_dep_delay_time = mean(DepDelay)) %>%
   arrange(desc(mean_dep_delay_time))
 
+# Print the first 7 rows
 mean_departure_delays %>% 
   slice_head(n = 7)
 ```
@@ -758,24 +521,52 @@ Could you try and guess why Chicago Airport has most departure delay time or why
 
 ### **Do late departures tend to result in longer arrival delays than on-time departures?**
 
+**Question 10.** Starting with the `df_flights` data, first encode `DepDel15` column (A binary indicator that departure was delayed by more than 15 minutes) as categorical.
+
+Use a **box plot** to investigate whether late departures (x-axis) tend to result in longer arrival delays (y-axis) than on-time departures. Map the fill aesthetic to the `DepDel15` variable.
+
+> You can colour a box plot using either the `colour` aesthetic (like in the previous exercises), or, more usefully with the `fill` aesthetic.
+
+
+```
+
+    BEGIN QUESTION
+    name: Question 10
+    manual: false
+    
+```
+
 ```{r}
-df_flights %>%
-  mutate(DepDel15 = factor(DepDel15)) %>% 
+# Encode DepDel15 as a categorical variable
+df_flights <- df_flights %>%
+  mutate(DepDel15 = factor(DepDel15)) 
+
+arr_delay_plot <- df_flights %>% 
   ggplot() +
   geom_boxplot(mapping = aes(x = DepDel15, y = ArrDelay, fill = DepDel15)) 
+
+arr_delay_plot
 ```
 
 Does this surprise you?
 
+```{r}
+. = ottr::check("tests/Question 10.R")
+```
+
+
 ### **Which route (from origin airport to destination airport) has the most late arrivals?**
+
 Finally, let's investigate travel routes. We'll start by adding a column `Route` that indicates the Origin and Destination airports.
+
 ```{r}
 # Add a "Route" column
 df_flights <- df_flights %>% 
   mutate(Route = paste(OriginAirportName, DestAirportName, sep = ">"))
 ```
 
-Great! Now we can use `group_by()`, `summarize()` and `arrange()` to find the routes with the most late arrivals 
+Great! Now we can use `group_by()`, `summarize()` and `arrange()` to find the routes with the most late arrivals
+
 ```{r}
 # Make grouped summaries to find the total delay associated with a particular route
 df_flights %>% 
@@ -786,20 +577,12 @@ df_flights %>%
 ```
 
 ### **Which route has the highest average arrival delay time?**
+
 Over to you!
 
-**Question 9.** Starting with the `df_flights` data, group the observations by `Route` then create a summary tibble with a column name `ArrDelay` which represents the mean arrival delay time. Arrange this in descending order.
+**Question 11.** Starting with the `df_flights` data, group the observations by `Route` then create a summary tibble with a column name `ArrDelay` which represents the mean arrival delay time. Arrange this in descending order.
 
 Assign your results to a variable name `df_route_arrdelay`
-
-
-
-
-```
-BEGIN QUESTION
-name: q9
-points: 1
-```
 
 ```{r}
 # Create grouped summaries of the arrival delay time
@@ -808,60 +591,15 @@ df_route_arrdelay <- df_flights %>%
   summarise(ArrDelay = mean(ArrDelay)) %>% 
   arrange(desc(ArrDelay)) 
 
+
+# Print the first 5 rows
+df_route_arrdelay %>% 
+  slice_head(n = 5)
 ```
-
-
-
 
 ```{r}
-## Test ##
-test_that('summary tibble has correct dimensions', {
-  
-  expect_output(glimpse(df_route_arrdelay), "Rows: 2,479\nColumns: 2", fixed = TRUE)
-  
-  
-})
+. = ottr::check("tests/Question 11.R")
 ```
-
-
-```{r}
-## Test ##
-test_that('summary tibble has correct arrival delay times', {
-  
-  expect_equal(slice(df_route_arrdelay, 1)$ArrDelay, 24.5)
-})
-```
-
-
-
-```{r}
-## Test ##
-test_that('summary tibble has correct arrival delay times', {
-  
-  expect_equal(slice(df_route_arrdelay, 22)$Route, "John F. Kennedy International>Richmond International")
-  
-  
-  
-})
-```
-
-
-
-
-```{r}
-. = " # BEGIN TEST CONFIG
-points: 1
-hidden: true
-" # END TEST CONFIG
-test_that('summary tibble has correct values', {
-  
-  expect_output(glimpse(df_route_arrdelay), "Rows: 2,479\nColumns: 2", fixed = TRUE)
-  expect_equal(slice(df_route_arrdelay, 2476)$Route, "Eppley Airfield>LaGuardia")
-  
-})
-```
-
-
 
 
 Congratulations on finishing the first challenge! We'll wrap it at that for now. Of course there are other ways to approach this challenge. So please feel free to experiment, google and share your solutions with friends.
@@ -875,5 +613,6 @@ Happy Learning,
 ```{r}
 library(here)
 library(rmd2jupyter)
-rmd2jupyter("01_Data_Exploration_Solution_Ottr.Rmd")
+rmd2jupyter("01_Data_Exploration_Solution_Ottr_Learner.Rmd")
 ```
+
